--- a/war/AeroplaneChess.html
+++ b/war/AeroplaneChess.html
@@ -1,16 +1,21 @@
 <!doctype html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Aeroplane Chess</title>
-    <script type="text/javascript" language="javascript" src="aeroplane_chess/aeroplane_chess.nocache.js"></script>
-    <style>
-  .marginTop {
-    margin-top: 10px;
-  }
-    </style>
-  </head>
-  <body>
-    <div id="mainDiv" width="850" height="850" ></div>
-  </body>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>Aeroplane Chess</title>
+<script type="text/javascript" language="javascript"
+	src="aeroplane_chess/aeroplane_chess.nocache.js"></script>
+<style>
+.marginTop {
+	margin-top: 10px;
+}
+.lightShadow {
+  opacity:0.5;
+  filter:alpha(opacity=50);
+}
+</style>
+</head>
+<body>
+	<div id="mainDiv" width="850" height="850"></div>
+</body>
 </html>
