--- a/war/AeroplaneChess.html
+++ b/war/AeroplaneChess.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0">
 <title>Aeroplane Chess</title>
 <script type="text/javascript" language="javascript"
 	src="aeroplane_chess/aeroplane_chess.nocache.js"></script>
@@ -16,6 +17,6 @@
 </style>
 </head>
 <body>
-	<div id="mainDiv" width="850" height="850"></div>
+	<div id="mainDiv" class="floatLeft"></div>
 </body>
 </html>
