HW11 - I18n and Mobile UI - Dynamically-sized mobile emulator version: emulator at http://smg-gwt-emulator.appspot.com/GwtEmulator.html, enter in the emulator this URL: http://4-dot-aeroplane-chess.appspot.com - Japanese version at ?locale=ja - DnD removed (gwt-dnd buggy for resized version) - Animation fixed

--- a/war/AeroplaneChess.html
+++ b/war/AeroplaneChess.html
@@ -1,11 +1,36 @@
 <!doctype html>
 <html>
 <head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0">
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <title>Aeroplane Chess</title>
 <script type="text/javascript" language="javascript"
 	src="aeroplane_chess/aeroplane_chess.nocache.js"></script>
+<script>
+function scaleBody() {
+  var myGameWidth = 830;
+  var myGameHeight = 730;
+  var scaleX = window.innerWidth / myGameWidth;
+  var scaleY = window.innerHeight / myGameHeight;
+  var scale = Math.min(scaleX, scaleY);
+  var transformString = "scale(" + scale + "," + scale + ")";
+  document.body.style.transform = transformString;
+  document.body.style['-o-transform'] = transformString;
+  document.body.style['-webkit-transform'] = transformString;
+  document.body.style['-moz-transform'] = transformString;
+  document.body.style['-ms-transform'] = transformString;
+  var transformOriginString = "0 0 0";
+  document.body.style['transform-origin'] = transformOriginString;
+  document.body.style['-o-transform-origin'] = transformOriginString;
+  document.body.style['-webkit-transform-origin'] = transformOriginString;
+  document.body.style['-moz-transform-origin'] = transformOriginString;
+  document.body.style['-ms-transform-origin'] = transformOriginString;
+}
+window.onresize = scaleBody;
+window.onorientationchange = scaleBody;
+window.onload = scaleBody;
+document.addEventListener("orientationchange", scaleBody);
+</script>
 <style>
 .marginTop {
 	margin-top: 10px;
@@ -16,7 +41,7 @@
 }
 </style>
 </head>
-<body>
-	<div id="mainDiv" class="floatLeft"></div>
+<body style="width: 830px; height: auto;">
+	<div id="mainDiv"></div>
 </body>
 </html>
