HW12 - AI Since Aeroplane Chess is a game of chance, I have a simple AI opponent that plays randomly (picking from among possible moves if it's the computer's turn).  Tested in GWT Emulator at http://smg-gwt-emulator.appspot.com/GwtEmulator.html , select "AI Present" and enter this URL: http://5-dot-aeroplane-chess.appspot.com/

--- a/war/AeroplaneChess.html
+++ b/war/AeroplaneChess.html
@@ -33,7 +33,7 @@ document.addEventListener("orientationchange", scaleBody);
 </script>
 <style>
 .marginTop {
-	margin-top: 10px;
+	margin-top: 15px;
 }
 .lightShadow {
   opacity:0.5;
@@ -41,7 +41,7 @@ document.addEventListener("orientationchange", scaleBody);
 }
 </style>
 </head>
-<body style="width: 830px; height: auto;">
+<body style="width: auto; height: auto;">
 	<div id="mainDiv"></div>
 </body>
 </html>
