--- a/war/AeroplaneChess.html
+++ b/war/AeroplaneChess.html
@@ -4,6 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <title>Aeroplane Chess</title>
+<script type="text/javascript" src="//multiplayer-gaming.com/api.js?version=1"></script>
 <script type="text/javascript" language="javascript"
 	src="aeroplane_chess/aeroplane_chess.nocache.js"></script>
 <script>
